[package]
name = "linera-ethereum"
version = "0.11.0"
description = "Oracle functionality for Ethereum"
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-ethereum/latest/linera_ethereum/"
license = "Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["ethereum"]

[features]
ethereum = []

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
async-lock.workspace = true
async-trait.workspace = true
linera-base.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth", "provider-http", "json-rpc", "node-bindings", "signer-wallet", "network", "contract" ] }
url.workspace = true
tokio = { workspace = true, features = ["full"] }
linera-storage-service.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy = { workspace = true, default-features = false, features = [ "rpc-types-eth" ] }

[build-dependencies]
cfg_aliases.workspace = true
