[workspace]
resolver = "2"
members = [
        "counter",
        "counter2",
        "counter-graphql",
        "crowd-funding",
        "fungible",
        "meta-counter",
        "counter2",
        "crowd-funding2",
        "fungible-graphql",
        "reentrant-counter",
        "reentrant-counter2",
        "social",
]

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
