[workspace]
resolver = "2"
members = [
        "counter",
        "counter-views",
        "counter-graphql",
        "crowd-funding",
        "fungible",
        "meta-counter",
        "counter-views",
        "crowd-funding-views",
        "fungible-views",
        "reentrant-counter",
        "reentrant-counter-views",
        "social",
]

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
