[workspace]
resolver = "2"
members = [
        "counter",
        "counter2",
        "counter-graphql",
        "crowd-funding",
        "fungible",
        "meta-counter",
        "counter2",
        "crowd-funding2",
        "fungible2",
        "reentrant-counter",
        "reentrant-counter2",
        "social",
]

[workspace.dependencies]
async-graphql = { version = "5.0.7", default-features = false }
async-trait = "0.1.52"
bcs = "0.1.3"
futures = "0.3.17"
futures-util = "0.3.26"
hex = "0.4.3"
linera-sdk = { path = "../linera-sdk" }
linera-views = { path = "../linera-views" }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.31"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
webassembly-test = "0.1.0"

crowd-funding = { path = "./crowd-funding" }
fungible = { path = "./fungible" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
