[package]
name = "linera-explorer"
version = "0.2.0"
edition = "2021"
description = "Block explorer for the Linera network"
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.io"
documentation = "https://docs.rs/linera-explorer/latest/linera_explorer/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.4"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "console", "Window", "History", "Storage", "Location" ] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
graphql_client = { version = "0.13", features = [ "reqwest" ] }
ws_stream_wasm = "0.7"
uuid = { version = "1.4", features = [ "v3" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
linera-base = { workspace = true }
futures = { workspace = true }