[package]
name = "linera-explorer"
version = "0.4.0"
edition = "2021"
description = "Block explorer for the Linera network"
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-explorer/latest/linera_explorer/"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
console_error_panic_hook = "0.1"
futures = { workspace = true }
graphql_client = { version = "0.13", features = [ "reqwest" ] }
hex = { workspace = true }
reqwest = { workspace = true }
js-sys = "0.3"
linera-base = { workspace = true }
linera-graphql-client = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde-wasm-bindgen = "0.5"
serde_json = { workspace = true }
uuid = { version = "1.4", features = [ "v3" ] }
url = "2.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "console", "Window", "History", "Storage", "Location" ] }
ws_stream_wasm = "0.7"
