[package]
name = "linera-faucet"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
linera-base.workspace = true
serde.workspace = true

[dependencies.async-graphql]
workspace = true
optional = true
