[package]
name = "linera-faucet"
description = "Common definitions for the Linera faucet."
readme = "README.md"
documentation = "https://docs.rs/linera-faucet/latest/linera_faucet/"

version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
linera-base.workspace = true
serde.workspace = true
serde_with = "3.12.0"

[dependencies.async-graphql]
optional = true
workspace = true
