[package]
name = "linera-metrics"
description = "A library for Linera server metrics."
readme = "README.md"
documentation = "https://docs.rs/linera-metrics/latest/linera_metrics/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
jemalloc = ["linera-jemalloc-ctl", "mappings", "pprof_util", "tempfile"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
linera-jemalloc-ctl = { workspace = true, optional = true }
mappings = { workspace = true, optional = true }
pprof_util = { workspace = true, optional = true }
prometheus.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
