[package]
name = "linera-persistent"
description = "A library for persisting data types to disk with a variety of backends."
readme = "README.md"
documentation = "https://docs.rs/linera-persistent/latest/linera_persistent/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
fs = ["fs-err", "fs4"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs-err = { workspace = true, optional = true }
fs4 = { workspace = true, optional = true }

[build-dependencies]
cfg_aliases.workspace = true

[dependencies]
cfg-if.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
thiserror-context.workspace = true
tracing.workspace = true
trait-variant.workspace = true
