[package]
name = "linera-rpc"
version = "0.1.0"
description = "RPC schemas and networking library for the Linera protocol."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.io"
documentation = "https://docs.rs/linera-rpc/latest/linera_rpc/"
license = "Apache-2.0"
edition = "2021"

[features]
test = ["linera-base/test", "linera-chain/test", "linera-core/test", "linera-execution/test", "linera-storage/test"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
linera-base = { workspace = true }
linera-chain = { workspace = true }
linera-core = { workspace = true }
linera-execution = { workspace = true }
linera-storage = { workspace = true }
linera-views = { workspace = true }
tracing = { workspace = true }
proptest = { workspace = true, optional = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "net"] }
tonic = { workspace = true }
tonic-health = { workspace = true }

[dev-dependencies]
linera-rpc = { path = ".", features = ["test"] }
proptest = { workspace = true }
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
similar-asserts = { workspace = true }
structopt = { workspace = true }
test-strategy = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["proptest", "prost"]
