[package]
name = "linera-rpc"
version = "0.9.0"
description = "RPC schemas and networking library for the Linera protocol."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-rpc/latest/linera_rpc/"
license = "Apache-2.0"
edition = "2021"

[features]
test = [
    "linera-base/test",
    "linera-chain/test",
    "linera-core/test",
    "linera-execution/test",
    "linera-storage/test"
]
metrics = [
    "prometheus",
    "linera-base/metrics",
    "linera-chain/metrics",
    "linera-core/metrics",
    "linera-execution/metrics",
    "linera-storage/metrics",
    "linera-views/metrics",
]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
http.workspace = true
linera-base.workspace = true
linera-chain.workspace = true
linera-core.workspace = true
linera-execution.workspace = true
linera-storage.workspace = true
linera-version.workspace = true
linera-views.workspace = true
prometheus = { workspace = true, optional = true }
proptest = { workspace = true, optional = true }
prost.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
linera-rpc = { path = ".", features = ["test"] }
proptest.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true
similar-asserts.workspace = true
test-strategy.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec", "net"] }
tonic = { workspace = true, features = ["codegen", "prost", "tls"] }
tonic-health.workspace = true
tower.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
tonic-build = { workspace = true, features = ["prost"] }

[package.metadata.cargo-machete]
ignored = ["getrandom", "proptest", "prost"]
