[package]
name = "linera-sdk-derive"
description = "The procedural macros for the crate `linera-sdk`"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
