[package]
name = "linera-sdk"
version = "0.1.0"
description = "Library to support developping Linera applications in Rust."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.io"
documentation = "https://docs.rs/linera-sdk/latest/linera_sdk/"
license = "Apache-2.0"
edition = "2021"

[package.metadata.cargo-udeps.ignore]
development = ["linera-sdk"]

[package.metadata.docs.rs]
features = ["test", "wasmer"]
targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]

[features]
wasmer = ["linera-core/wasmer", "linera-execution/wasmer", "linera-storage/wasmer"]
wasmtime = ["linera-core/wasmtime", "linera-execution/wasmtime", "linera-storage/wasmtime"]
test = []

[dependencies]
async-trait = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
linera-base = { workspace = true }
linera-views = { workspace = true }
wit-bindgen-guest-rust = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
dashmap = { workspace = true }
linera-base = { workspace = true }
linera-chain = { workspace = true }
linera-core = { workspace = true, features = ["test"] }
linera-execution = { workspace = true }
linera-storage = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wasmtime = { workspace = true }
wit-bindgen-host-wasmtime-rust = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-test = { workspace = true }
