[package]
name = "linera-sdk"
version = "0.11.0"
description = "Library to support developping Linera applications in Rust."
authors = ["Linera <contact@linera.io>"]
readme = "README.md"
repository = "https://github.com/linera-io/linera-protocol"
homepage = "https://linera.dev"
documentation = "https://docs.rs/linera-sdk/latest/linera_sdk/"
license = "Apache-2.0"
edition = "2021"

[package.metadata.cargo-udeps.ignore]
development = ["linera-sdk"]

[package.metadata.docs.rs]
features = ["test", "wasmer"]
targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]

[features]
wasmer = ["linera-core/wasmer", "linera-execution/wasmer", "linera-storage/wasmer"]
wasmtime = [
    "linera-core/wasmtime",
    "linera-execution/wasmtime",
    "linera-storage/wasmtime",
]
test = ["linera-base/test"]

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
bcs.workspace = true
futures.workspace = true
linera-base.workspace = true
linera-sdk-derive.workspace = true
linera-version.workspace = true
linera-views.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen-guest-rust.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-graphql.workspace = true
anyhow.workspace = true
cargo_toml.workspace = true
clap.workspace = true
dashmap.workspace = true
linera-base = { workspace = true, features = ["metrics"] }
linera-chain = { workspace = true, features = ["metrics"] }
linera-core = { workspace = true, features = ["test", "metrics", "wasmer"] }
linera-execution = { workspace = true, features = ["fs", "metrics", "wasmer"] }
linera-storage = { workspace = true, features = ["metrics", "wasmer"] }
linera-witty = { workspace = true, features = ["test"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wasmtime.workspace = true
wit-bindgen-host-wasmtime-rust.workspace = true

[build-dependencies]
cfg_aliases.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-test.workspace = true

[[bin]]
name = "wit-generator"
path = "src/bin/wit_generator.rs"
