[package]
name = "linera-sdk"
description = "Library to support developing Linera applications in Rust."
readme = "README.md"
documentation = "https://docs.rs/linera-sdk/latest/linera_sdk/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["linera-sdk"]

[package.metadata.docs.rs]
features = ["test", "wasmer"]
targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]

[package.metadata.cargo-machete]
# TODO(#3421): Remove the pinned version once the `linera-*` crates move to Rust Edition 2024
ignored = ["base64ct"]

[features]
ethereum = ["async-trait", "linera-ethereum"]
revm = ["linera-execution/revm"]
unstable-oracles = [
    "linera-core/unstable-oracles",
    "linera-execution/unstable-oracles",
]
wasmer = [
    "linera-core/wasmer",
    "linera-execution/wasmer",
    "linera-storage/wasmer",
]
wasmtime = [
    "linera-core/wasmtime",
    "linera-execution/wasmtime",
    "linera-storage/wasmtime",
]
test = [
    "linera-base/test",
    "linera-core/test",
    "linera-sdk/test",
    "linera-storage/test",
    "linera-views/test",
]

[dependencies]
async-graphql.workspace = true
async-trait = { workspace = true, optional = true }

# TODO(#3421): Remove the pinned version once the `linera-*` crates move to Rust Edition 2024
base64ct = "=1.6.0"
bcs.workspace = true
futures.workspace = true
linera-base.workspace = true
linera-ethereum = { workspace = true, optional = true }
linera-sdk-derive.workspace = true
linera-views.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wit-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow.workspace = true
cargo_toml.workspace = true
dashmap.workspace = true
linera-base = { workspace = true, features = ["metrics"] }
linera-chain = { workspace = true, features = ["metrics"] }
linera-core = { workspace = true, features = ["metrics", "wasmer"] }
linera-execution = { workspace = true, features = ["fs", "metrics", "wasmer"] }
linera-storage = { workspace = true, features = ["metrics", "wasmer"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { path = ".", default-features = false, features = ["test"] }
tokio-test.workspace = true

[build-dependencies]
cfg_aliases.workspace = true
