[package]
name = "linera-service-graphql-client"
description = "A GraphQL client for Linera node service"
readme = "README.md"
documentation = "https://docs.rs/linera-service-graphql-client/latest/linera_service_graphql_client/"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["rocksdb"]
rocksdb = ["linera-service/rocksdb"]
dynamodb = ["linera-service/dynamodb"]
scylladb = ["linera-service/scylladb"]
storage-service = ["linera-service/storage-service"]

[dependencies]
graphql_client = { version = "0.13", features = ["reqwest-rustls"] }
linera-base.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
linera-chain.workspace = true
linera-core.workspace = true
linera-execution.workspace = true

[dev-dependencies]
fungible.workspace = true
linera-service = { workspace = true, features = ["test"] }
tempfile.workspace = true
test-case.workspace = true
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt"] }
